--- a/www/products.html
+++ b/www/products.html
@@ -2,6 +2,24 @@
     <div class="row">
       <div class="col-lg-3 col-md-3">
         <div class="card text-center">
+          <img src="img/duck.jpg" alt="Product 1" class="card-img-top">
+          <div class="card-body">
+            <h5 class="card-title">Product 1</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="#" class="btn btn-primary">Learn More</a>
+          </div>
+        </div>
+        
+        <div class="card text-center">
+          <img src="img/duck.jpg" alt="Product 2" class="card-img-top">
+          <div class="card-body">
+            <h5 class="card-title">Product 1</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="#" class="btn btn-primary">Learn More</a>
+          </div>
+        </div>
+        
+        <div class="card text-center">
           <img src="img/duck.jpg" alt="Product 3" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">Product 1</h5>
