--- a/www/index.html
+++ b/www/index.html
@@ -27,7 +27,6 @@
 		<li class="nav-item">
           <a class="nav-link" href="blog.html">Blog</a>
         </li>
-       
       </ul>
       <span class="navbar-text">
 		 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -37,7 +36,9 @@
 		<li class="nav-item">
           <a class="nav-link" href="reg.html">Register</a>
         </li>
-	</ul>
+        <li class="nav-item">
+   		  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+		</ul>
       </span>
     </div>
   </div>
