--- a/www/products.html
+++ b/www/products.html
@@ -1,3 +1,5 @@
+</head>
+<body>
 <div class="container">
     <div class="row">
       <div class="col-lg-3 col-md-3">
@@ -13,7 +15,7 @@
         <div class="card text-center">
           <img src="img/duck.jpg" alt="Product 2" class="card-img-top">
           <div class="card-body">
-            <h5 class="card-title">Product 1</h5>
+            <h5 class="card-title">Product 2</h5>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <a href="#" class="btn btn-primary">Learn More</a>
           </div>
@@ -22,11 +24,10 @@
         <div class="card text-center">
           <img src="img/duck.jpg" alt="Product 3" class="card-img-top">
           <div class="card-body">
-            <h5 class="card-title">Product 1</h5>
+            <h5 class="card-title">Product 3</h5>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <a href="#" class="btn btn-primary">Learn More</a>
           </div>
         </div>
      </div>
-	</div>
-</div>
+
