--- a/www/blog.html
+++ b/www/blog.html
@@ -46,8 +46,8 @@
     	</div>
   </div>
 </nav>
-	<h1>Products</h1>
-	
+
+<h1>Blog</h1>	
 	<div class="container">
       <div class="row">
       	<div class="col-lg-3 col-md-3">
